@@ -1,3 +1,6 @@
+2003-05-28 Mariusz Woloszyn
+	* ptp.h: two more CANON properties (thanks to Jean-Nicolas Kuttler)
+	* ptpcam.c: two more CANON properties (thanks to Jean-Nicolas Kuttler)
 2003-05-26 Mariusz Woloszyn
 	* ptp.h: added some CANON extension device property codes (thanks
 	  goes to Jean-Nicolas Kuttler)
